# cubrid-manager-server

./: LICENSE  README.md
docs/api/: README.md  addbackupinfo.md  adddbmtuser.md  adddbmtuser_new.md  addtrigger.md  addvoldb.md  altertrigger.md  analyzecaslog.md  backupdb.md  backupdbinfo.md  backupvolinfo.md  broker_restart.md  broker_setparam.md  broker_start.md  broker_stop.md  changemode.md  checkdb.md  class.md  classinfo.md  compactdb.md  copydb.md  createdb.md  createuser.md  dbmtuserlogin.md  dbspaceinfo.md  deleteaccesslog.md  deletebackupinfo.md  deletebroker.md  deletedb.md  deletedbmtuser.md  deleteerrorlog.md  deleteuser.md  droptrigger.md  get_mon_interval.md  get_mon_statistic.md  getaddbrokerinfo.md  getaddvolstatus.md  getadminloginfo.md  getallsysparam.md  getautoaddvol.md  (+64 more)
server/: BUILD_NUMBER  Makefile.am  README  autogen.sh  build.bat  build_cms_env.sh  build_external.sh  build_internal.bat  build_server.bat  configure.ac  hudsonbuild.cmd  set_hudson_env.sh
server/cmserver/: Makefile.am
server/cmserver/conf/: Makefile.am  cm.conf  cm_ssl_cert.crt  cm_ssl_cert.key
server/share/webmanager/: appLoader.js  cwm-all.js  index.html  log-all.js  logLoader.js  logs.html
server/share/webmanager/i18n/: Languages.properties  Messages.properties  Messages_ko.properties
server/share/webmanager/lib/: Exporter-all.js  codemirror-min.js  i18n.js
server/share/webmanager/resources/css/: codemirror.css  custom.css  tab.css
server/src/: cm_auto_task.cpp  cm_auto_task.h  cm_autojob.cpp  cm_autojob.h  cm_cci_interface.cpp  cm_cci_interface.h  cm_cmd.cpp  cm_cmd_exec.cpp  cm_cmd_exec.h  cm_cmd_task.cpp  cm_cmd_task.h  cm_cmd_util.cpp  cm_cmd_util.h  cm_compress.h  cm_config.cpp  cm_config.h  cm_connect_info.cpp  cm_connect_info.h  cm_http_server.cpp  cm_http_server.h  cm_httpd.cpp  cm_job_task.cpp  cm_job_task.h  cm_log.h  cm_mailer.h  cm_mon_stat.cpp  cm_mon_stat.h  cm_porting.h  cm_server_autoupdate.cpp  cm_server_autoupdate.h  cm_server_extend_interface.cpp  cm_server_extend_interface.h  cm_server_interface.cpp  cm_server_interface.h  cm_server_stat.c  cm_server_stat.h  cm_server_util.cpp  cm_server_util.h  cm_text_encryption.c  cm_text_encryption.h  (+6 more)
server/test/: Makefile  hudsonbuild.sh  sendfile.cpp  task_list.txt  test_cci.py  test_tasks.php  test_tasks.py
server/test/cm_mon_data/: dump_data.py
server/test/task_test_case/: addbackupinfo  adddbmtuser_existid  adddbmtuser_lilo  adddbmtuser_nullid  adddbmtuser_nullpasswd  addstatustemplate  addtrigger  addvoldb  addvoldb_bigsize  addvoldb_nullpurpose  addvoldb_nullsize  altertrigger  analyzecaslog  analyzecaslog_option_no  applylogdb  backupdb  backupdb_nulldir  backupdb_nullname  backupdb_rep  backupdbinfo  backupvolinfo  broker_restart  broker_restart_errbroker  broker_restart_nullbroker  broker_setparam  broker_start  broker_start_errbroker  broker_start_nullbroker  broker_stop  broker_stop_errbroker  broker_stop_nullbroker  changemode  checkdb  checkdb_nullname  checkdir  checkfile  class  classinfo  compactdb  copydb  (+143 more)
server/test/task_test_case_json/: adddbmtuser.txt  addstatustemplate.txt  addtrigger.txt  addvoldb.txt  altertrigger.txt  analyzecaslog.txt  analyzecaslog_option_no.txt  applylogdb.txt  backupdb.txt  backupdbinfo.txt  backupvolinfo.txt  broker_restart.txt  broker_setparam.txt  broker_start.txt  broker_stop.txt  changemode.txt  checkdb.txt  checkdir.txt  checkfile.txt  class.txt  classinfo.txt  compactdb.txt  copydb.txt  copydb_advance.txt  copyfolder.txt  copylogdb.txt  createdb.txt  createdb_fail_with_dup_name.txt  createdb_for_copydb.txt  createuser.txt  dbmtuserlogin.txt  dbspaceinfo.txt  deleteaccesslog.txt  deletebackupinfo.txt  deletebroker.txt  deletedb.txt  deletedb_for_copydb.txt  deletedbmtuser.txt  deleteerrorlog.txt  deletefolder.txt  (+91 more)
server/test/task_test_config/cm_conf/: autoaddvoldb.conf  autobackupdb.conf  autoexecquery.conf  autohistory.conf  cm.conf  cubrid_broker.conf
server/test/task_test_config/ha_conf/: README.txt  cubrid.conf
server/test/task_test_config/orign/: README.txt
server/test/task_test_config/tmp_file_for_test/: analyzelog_1.res
server/test/task_test_sql/: import.sql
server/win/: cmserver.sln  config.h  system.h  version.h
server/win/cm_admin/: cm_admin.vcproj  version.rc
server/win/cub_manager/: cub_manager.vcproj  resource.h  version.rc
server/win/install/: install.bat  install.vcproj
